# racbil

./: .clang-tidy  .gitignore  README.md  main.c  meson.build  plot.py
.github/workflows/: c.yml
notebooks/: engine_torque_map.ipynb  inspect_output.ipynb  tiremodel.ipynb  tiremodel.py
src/: assists.c  assists.h  body.c  body.h  brake.c  brake.h  common.c  common.h  lib.c  main.c  powertrain.c  powertrain.h  powertrainabs.c  powertrainabs.h  racbil.h  tiremodel.c  tiremodel.h  wheel.c  wheel.h
src/tests/: abs.c  add_powertrain_comp.c  brakes.c  cog.c  common.c  cyclic_powertrain.c  diff.c  engine_idle.c  gb_shifting.c  gearbox_ratios.c  revlimiter.c  test.h  wheel_direction.c
